Wed Feb 11 22:35:21 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* external_posting_source/sortdatabase/README: Document the
	  "reversed" parameter to make_order.py

Wed Feb 11 21:23:55 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* external_posting_source/sortdatabase/README: Add instructions for
	  sortdatabase.

Wed Feb 11 18:59:17 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* external_posting_source/sortdatabase/Makefile,
	  external_posting_source/sortdatabase/make_order.py,
	  external_posting_source/sortdatabase/sortdatabase.cc: Much faster
	  sortdatabase code.  Reads documents in order, in big batches,
	  writes the documents to batch files, then reads each batch file,
	  sorts it, and writes the documents in it.

Fri Feb 06 11:55:51 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* external_posting_source/sortdatabase/sortdatabase.cc: Separate
	  reading the documents from writing them, in the hope of a
	  performance boost.  Doesn't seem to help much, but committing the
	  code in case I'm missing something.

Tue Jan 20 10:18:28 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/field_associations.py: Add test for relevant_data
	  when allow_field_specific is False.

Mon Jan 19 17:45:02 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* external_posting_source/sortdatabase/Makefile,
	  external_posting_source/sortdatabase/sortdatabase.cc,
	  external_posting_source/sortdatabase/test_sortdatabase.py: Add
	  sortdatabase command, to sort a database by an external list of
	  orders.

Mon Jan 19 14:18:37 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Update versions of xapian packages.

Mon Jan 19 14:17:02 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* coverage.py: Update coverage version.

Tue Jan 13 17:10:47 GMT 2009  Tom Mortimer <tom@lemurconsulting.com>

	* xappy/searchconnection.py: Switched to using SORTABLE action for