@@ -45,21 +45,21 @@ except ImportError:
 #  - SHA1 sum of package
 archives = (
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-11823.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-11831.tgz',
      'xapian-core.tgz',
-     'bbb2f8b5e8889ceb854cc08409d11f5b90466558',
+     '924375e1f1a78c78b391907f79a678717870abee',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-11823.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-11831.tgz',
      'xapian-bindings.tgz',
-     'd352ace70a42b236191f93f6faeec1bb2013f16a',
+     'a2de923940e5cebcae174a23c448bf1b9cfb6713',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-11823.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-11831.tgz',
      'win32msvc.tgz',
-     'df017fc6368c9dc8d0ede4a8177b73e478e86fb5',
+     '32705b90c346fec914370ef619fda194e36815cf',
      'xapian-core/win32',
     ),
 )
